# HuzDSP

./: .gitignore  README.md  et --soft HEAD~1
.metadata/: .log4j2.xml  version.ini
.metadata/.plugins/org.eclipse.cdt.core/: H7Test.language.settings.xml  HuzDSPV1.language.settings.xml  test.1765844848376.pdom  test.language.settings.xml  tests.language.settings.xml
.metadata/.plugins/org.eclipse.cdt.ui/: dialog_settings.xml
.metadata/.plugins/org.eclipse.core.resources/: 10.snap  (+4 more)
Firmware/: .cproject  .mxproject  .project  HuzDSPV2.ioc  STM32H743VITX_FLASH.ld
Firmware/Core/UI/: CMakeLists.txt  filelist.txt  project.info  ui.c  ui.h  ui_events.c  ui_events.h  ui_helpers.c  ui_helpers.h  ui_themes.c  ui_themes.h
Firmware/Core/UI/fonts/: ui_font_IndexFont.c
Firmware/Core/UI/images/: ui_img_flatindicator_png.c  ui_img_lineasset_png.c  ui_img_tunerasset_png.c
Firmware/Core/UI/screens/: ui_Main.c  ui_Main.h  ui_Pedal.c  ui_Pedal.h  ui_Tuner.c  ui_Tuner.h
Firmware/Drivers/: lv_conf.h
H7Test/: .cproject  .mxproject  .project  H7Test.ioc
HuzDSPV1/: .cproject  .mxproject  .project  HuzDSPV1.ioc
HuzDSPV1/Debug/: HuzDSPV1.elf  HuzDSPV1.list  HuzDSPV1.map  makefile  objects.list  sources.mk
PCB/: top_level_Copper_Signal_1.gbr  top_level_Copper_Signal_2.gbr  top_level_Copper_Signal_Bot.gbr  top_level_Copper_Signal_Top.gbr  top_level_Legend_Bot.gbr  top_level_Legend_Top.gbr  top_level_NPTH_Drill.gbr  top_level_PTH_Drill.gbr  top_level_Paste_Bot.gbr  top_level_Paste_Top.gbr  top_level_Profile.gbr  top_level_Soldermask_Bot.gbr  top_level_Soldermask_Top.gbr
(+134 files in other folders)
